# codebase-knowledge-builder

./: .editorconfig  .env.example  .gitignore  .gitmessage  README.md  augment-guidelines.md  demo_mermaid_validation.py  demo_updated_mermaid_system.py  fix_mermaid.py  fix_mermaid_in_nodes.py  fix_specific_mermaid.py  history_analysis.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  test_concurrency_improvements.py  test_mermaid_fix.py  test_mermaid_fixes.py  test_requests.py  update_llm_calls.py
.uv/: config.toml
codebase_knowledge_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: default.yml  development.yml
docs/: config_management.md  config_simplification.md  design.md  latest_features.md  llm_config_troubleshooting.md  prompt_optimization_summary.md  ruff_usage.md  testing_guide.md
docs_output/requests/: dependency.md  glossary.md  index.md  overall_architecture.md  overview.md  quick_look.md  timeline.md
docs_output/requests/modules/: adapters.md  api.md  exceptions.md  index.md  models.md  sessions.md  status_codes.md  utils.md
examples/: generate_docs.py  parallel_generate_content.py
scripts/: clean.sh  run.sh  run_tests.sh  setup.sh  update_deps.sh  validate_config.py
src/: __init__.py
src/nodes/: __init__.py  ai_understand_core_modules_node.py  analyze_history_node.py  analyze_repo_flow.py  async_parallel_batch_node.py  async_parallel_flow.py  combine_and_translate_node.py  combine_content_node.py  content_quality_check_node.py  flow_connector_nodes.py  format_output_node.py  generate_api_docs_node.py  generate_content_flow.py  generate_dependency_node.py  generate_glossary_node.py  generate_module_details_node.py  generate_overall_architecture_node.py  generate_quick_look_node.py  generate_timeline_node.py  input_node.py  interactive_qa_node.py  mermaid_validation_node.py  module_quality_check_config.py  module_quality_check_evaluator.py  module_quality_check_node.py  parallel_generate_content_flow.py  parallel_start_node.py  parse_code_batch_node.py  parse_code_node.py  prepare_rag_data_node.py  prepare_repo_node.py  publish_node.py
src/utils/: code_parser.py  code_parser_base.py  code_parser_extractors.py  code_parser_file.py  code_parser_repo.py  concurrency_manager.py  config_loader.py  env_manager.py  formatter.py  language_utils.py  llm_client.py  load_balancer.py  logging_config.py  mermaid_realtime_validator.py  mermaid_regenerator.py  mermaid_validator.py  performance.py  performance_monitor.py  rag_utils.py
src/utils/git_utils/: __init__.py  history_analyzer.py  repo_manager.py
src/utils/llm_wrapper/: __init__.py  llm_client.py  llm_client_async.py  llm_client_base.py  llm_client_langfuse.py  llm_client_sync.py  llm_client_utils.py  token_utils.py
src/utils/logger/: __init__.py
templates/: index_template.md
tests/: __init__.py  conftest.py  test_analyze_history.py  test_analyze_repo.py  test_code_parser.py  test_code_parser_extractors.py  test_combine_content_node.py  test_combine_translate_node.py  test_config_loader.py  test_env_manager.py  test_env_manager_direct.py  test_flow.py  test_format_output_node.py  test_formatter.py  test_generate_content_flow.py  test_generate_docs.py  test_generate_module_details_node.py  test_input_prepare.py  test_interactive_qa_node.py  test_litellm_logging.py  test_llm_call.py  test_llm_client_optimized.py  test_mermaid_validation.py  test_model_config.py  test_openrouter.py  test_openrouter_curl.sh  test_optimized_docs_generation.py  test_parallel_performance.py  test_prompt_optimization.py  test_publish_node.py  test_rag_utils.py  test_token_utils.py  test_with_requests.py
typings/pocketflow/: __init__.pyi
