[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codebase-knowledge-builder"
version = "0.1.1"
description = "A tool for analyzing Git repositories and generating knowledge documents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "yuanyu", email = "lws2004@163.com"},
]
dependencies = [
    "pocketflow>=0.0.2",
    "litellm>=0.13.0",
    "langfuse>=2.1.0",
    "gitpython>=3.1.40",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.1",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
